...
  void sendBarcode(){
    uploadBarcode = true;
    Future.delayed(Duration(seconds: 1), () {
      _savedCodes ??= [];
      savedCodes.add(_barcodeSelected.rawValue);
      uploadBarcode = false;
      globalScaffold.currentState.showSnackBar(SnackBar(content: Text("Guardado correcto...!", key: Key('scaffold'),)));
      resumeCamera();
    },);
  }

  ///Quita un elemento de los qr guardados
  void removeCode(int index) {
...
